# calculi

./: .gitignore  .hlint.yaml  CHANGELOG.md  LICENSE  README.md  StrictList2.hs  cabal.project  calculi.cabal  dirs.txt  time-gb-linux  time-gb-unix
.github/workflows/: haskell-ci.yml
Math/: dirs.txt
Math/Algebra/Category/: Category.hs
Math/Algebra/Commutative/: BPDemo.hs  BinPoly.hs  EPoly.hs  GBDemo.hs  GroebnerBasis.hs  UPoly.hs
Math/Algebra/Commutative/Field/: ZModP32.hs
Math/Algebra/General/: Algebra.hs  SparseSum.hs
Math/Algebra/Linear/: SparseVector.hs
Math/Prob/: Random.hs
bp-demo/: BPDemo.hs
src/: StrictList2.hs
src/Control/Parallel/: Cooperative.hs
src/Data/: Stack.hs
src/Math/Algebra/Category/: Category.hs
src/Math/Algebra/Commutative/: BinPoly.hs  EPoly.hs  GBDemo.hs  GroebnerBasis.hs  UPoly.hs  VMPoly.hs
src/Math/Algebra/Commutative/Field/: ZModP32.hs  ZModPW.hs
src/Math/Algebra/General/: Algebra.hs  SparseSum.hs
src/Math/Algebra/Linear/: SparseColumnsMatrix.hs  SparseVector.hs
test/: calculi-test.hs
test/Math/Algebra/Commutative/: TestBinPoly.hs  TestEPoly.hs  TestGroebnerBasis.hs  TestUPoly.hs
test/Math/Algebra/Commutative/Field/: TestZModP32.hs  TestZModPW.hs
test/Math/Algebra/General/: TestAlgebra.hs  TestSparseSum.hs
test/Math/Algebra/Linear/: TestSparseVector.hs
timings/: bench.hs  time-gb.hs  timings.txt
