cabal-version:      2.4
name:               calculi
version:            0.1.0.0
synopsis:           Fast parallel calculations in pure mathematics, e.g. Gröbner Bases

-- A longer description of the package.
-- description:

homepage:           https://github.com/DaveBarton/calculi
-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Dave Barton
maintainer:         dbarton@mathscribe.com
copyright:          Copyright (c) David R. Barton, 2022

category:           Math
extra-source-files: CHANGELOG.md dirs.txt timings/timings.txt

tested-with:        ghc ==9.2.4 ghc ==9.4.2

common deps
    default-language:   GHC2021
    default-extensions: DuplicateRecordFields LambdaCase MonoLocalBinds NoFieldSelectors
                        OverloadedRecordDot PatternSynonyms RecordWildCards
    other-extensions:   DataKinds, Strict
    ghc-options:        -Wall -Wcompat -Wno-incomplete-uni-patterns -feager-blackholing
    build-depends:      base >= 4.9 && < 5, extra >= 1.6 && < 1.8, containers == 0.6.*

library
    import:             deps
    
    exposed-modules:
        Math.Algebra.General.Algebra
        Math.Algebra.Category.Category
        Math.Algebra.Commutative.Field.ZModP32
        Math.Algebra.Linear.SparseVector
        Math.Algebra.General.SparseSum
        Math.Algebra.Commutative.UPoly
        Math.Algebra.Commutative.GroebnerBasis
        Math.Algebra.Commutative.EPoly
        Math.Algebra.Commutative.BinPoly
        Math.Algebra.Commutative.GBDemo
        Math.Prob.Random
        StrictList2

    build-depends:
        array == 0.5.*,
        -- constraints >= 0.11 && < 0.14,
            -- note 'implied' added in 0.13
        mod,
        parallel >= 3.2,
        random >= 1.2.1 && < 1.3,
        -- reflection >= 2.1.6 && < 2.2,
        stm >= 2.4 && < 2.6,
        -- strict >= 0.4,
        strict-list,
        time >= 1.9.3 && < 2

    hs-source-dirs:     src

-- executable calculi
    -- hs-source-dirs:     app

executable bp-demo
    import:             deps
    
    main-is:            BPDemo.hs

    build-depends:      calculi

    hs-source-dirs:     bp-demo
    ghc-options:        -threaded -rtsopts "-with-rtsopts=-N -A64m -t"

test-suite calculi-test
    import:             deps
    
    type:               exitcode-stdio-1.0
    
    main-is:            calculi-test.hs

    other-modules:
        Math.Algebra.General.TestAlgebra
        Math.Algebra.Commutative.Field.TestZModP32
        Math.Algebra.Commutative.TestUPoly
        Math.Algebra.Commutative.TestEPoly
        Math.Algebra.Commutative.TestBinPoly

    default-extensions: OverloadedStrings
    
    build-depends:      calculi, hedgehog == 1.*, mod, strict-list

    hs-source-dirs:     test
    ghc-options:        -threaded -rtsopts "-with-rtsopts=-N -A64m"

benchmark time-gb
    import:             deps
    
    type:               exitcode-stdio-1.0
    
    main-is:            time-gb.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    build-depends:      calculi, process >= 1.2 && < 2, time >= 1.9.3 && < 2

    hs-source-dirs:     timings
    ghc-options:        -threaded -rtsopts "-with-rtsopts=-N -A64m -s"
