cabal-version:      3.0
name:               calculi
version:            0.1.0.0
synopsis:           Fast parallel calculations in pure mathematics, e.g. Gröbner Bases

-- A longer description of the package.
-- description:

homepage:           https://github.com/DaveBarton/calculi
-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Dave Barton
maintainer:         dbarton@mathscribe.com
copyright:          Copyright (c) David R. Barton, 2022-2023

category:           Math
extra-source-files: CHANGELOG.md dirs.txt timings/timings.txt

tested-with:        ghc ==9.2.4 ghc ==9.4.4 ghc ==9.6.1

common deps
    default-language:   GHC2021
    default-extensions: DuplicateRecordFields LambdaCase MonoLocalBinds NoFieldSelectors
                        OverloadedRecordDot PatternSynonyms RecordWildCards
    other-extensions:   CPP DataKinds FunctionalDependencies Strict ViewPatterns
    ghc-options:        -Wall -Wcompat -feager-blackholing
    build-depends:      base >= 4.16 && < 5, containers >= 0.6 && < 0.8, extra >= 1.6 && < 1.8

library
    import:             deps
    
    exposed-modules:
        Control.Parallel.Cooperative
        Math.Algebra.General.Algebra
        Math.Algebra.Category.Category
        Math.Algebra.Commutative.Field.ZModPW
        Math.Algebra.Linear.SparseVector
        Math.Algebra.General.SparseSum
        Math.Algebra.Commutative.UPoly
        Math.Algebra.Commutative.GroebnerBasis
        Math.Algebra.Commutative.EPoly
        -- Math.Algebra.Commutative.VMPoly
        Math.Algebra.Commutative.BinPoly
        Math.Algebra.Commutative.GBDemo
        Math.Prob.Random
        StrictList2

    build-depends:
        async,
        -- fmt >= 0.4,
        ghc-trace-events,
        -- inspection-testing >= 0.3,
        mod,
        -- poly >= 0.5.1, deepseq, finite-typelits, vector-sized,
        primitive >= 0.8,
        random >= 1.2.1 && < 1.3,
        stm >= 2.4 && < 2.6,
        -- strict >= 0.4,
        strict-list,
        -- text,
        time >= 1.9.3 && < 2,
        vector

    hs-source-dirs:     src

-- executable calculi
    -- hs-source-dirs:     app

executable bp-demo
    import:             deps
    
    main-is:            BPDemo.hs

    build-depends:      calculi

    hs-source-dirs:     bp-demo
    ghc-options:        -threaded -rtsopts "-with-rtsopts=-N -A64m -t"

test-suite calculi-test
    import:             deps
    
    main-is:            calculi-test.hs
    type:               exitcode-stdio-1.0

    other-modules:
        Math.Algebra.General.TestAlgebra
        Math.Algebra.Commutative.Field.TestZModPW
        Math.Algebra.General.TestSparseSum
        Math.Algebra.Commutative.TestUPoly
        Math.Algebra.Commutative.TestGroebnerBasis
        Math.Algebra.Commutative.TestEPoly
        Math.Algebra.Commutative.TestBinPoly

    default-extensions: OverloadedStrings
    
    build-depends:      calculi, hedgehog == 1.*, mod, strict-list

    hs-source-dirs:     test
    ghc-options:        -threaded -rtsopts "-with-rtsopts=-N -A64m"

benchmark time-gb
    import:             deps
    
    main-is:            time-gb.hs
    type:               exitcode-stdio-1.0

    -- Modules included in this executable, other than Main.
    -- other-modules:

    build-depends:      calculi, process >= 1.2 && < 2, time >= 1.9.3 && < 2

    hs-source-dirs:     timings
    ghc-options:        -threaded -rtsopts "-with-rtsopts=-N -A64m -s"

benchmark bench
    import:             deps
    main-is:            bench.hs
    type:               exitcode-stdio-1.0
    build-depends:      calculi, deepseq, strict, tasty, tasty-bench
                        -- , poly, vector, vector-sized
    hs-source-dirs:     timings
    ghc-options:        -rtsopts -with-rtsopts=-T
