cabal-version:      3.0
name:               calculi
version:            0.1.0.0
synopsis:           Fast parallel calculations in pure mathematics, e.g. Gröbner Bases
description:
    A library for calculations in pure mathematics, with an emphasis on parallelism, exact (not
    @Float@ or @Double@) calculations, correctness, and efficiency.
    
    For basic definitions, start with the "Math.Algebra.General.Algebra" module.
homepage:           https://github.com/DaveBarton/calculi
bug-reports:        https://github.com/DaveBarton/calculi/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Dave Barton
maintainer:         Dave Barton
copyright:          Copyright (c) David R. Barton, 2022-2024

category:           Math, Algebra
extra-doc-files:    CHANGELOG.md dirs.txt timings/timings.txt
tested-with:        ghc == 9.4.8 || == 9.6.1 || == 9.8.1 || == 9.10.1

source-repository   head
    type:               git
    location:           https://github.com/DaveBarton/calculi

common deps
    default-language:   GHC2021
    default-extensions: DerivingStrategies DuplicateRecordFields LambdaCase MonoLocalBinds
                        NegativeLiterals NoFieldSelectors OverloadedRecordDot OverloadedStrings
                        PatternSynonyms RecordWildCards
    other-extensions:   CPP DataKinds FunctionalDependencies Strict ViewPatterns
    ghc-options:        -Wall -Wcompat -feager-blackholing -threaded
    if impl(ghc >= 9.8.1)
        ghc-options:        -Wno-x-partial
    build-depends:
        base >= 4.17 && < 5.0,
        containers >= 0.6 && < 0.8,
        extra >= 1.6 && < 1.8,
        fmt >= 0.4 && < 0.7,
        megaparsec < 9.7,
        mod >= 0.1.2 && < 0.3,
        parser-combinators < 1.4,
        safe < 0.4,
        strict >= 0.4 && < 0.6,
        text < 2.2

library
    import:             deps
    
    exposed-modules:
        Control.Parallel.Cooperative
        Math.Algebra.General.Algebra
        Math.Algebra.Category.Category
        Math.Algebra.Commutative.Field.ZModPW
        Math.Algebra.Linear.SparseVector
        Math.Algebra.Linear.SparseColumnsMatrix
        Math.Algebra.General.SparseSum
        Math.Algebra.Commutative.UPoly
        Math.Algebra.Commutative.GroebnerBasis
        Math.Algebra.Commutative.EPoly
        -- Math.Algebra.Commutative.VMPoly
        Math.Algebra.Commutative.BinPoly
        Math.Algebra.Commutative.GBDemo
        Math.Prob.Random
        StrictList2

    build-depends:
        async < 2.3,
        contiguous >= 0.6.1.1 && < 0.7,
        ghc-trace-events < 0.2,
        -- hashable, unordered-containers,
        -- inspection-testing >= 0.3 && < 0.6,
        -- poly >= 0.5.1, deepseq, finite-typelits, vector-sized,
        primitive >= 0.8 && < 0.10,
        random >= 1.2.1 && < 1.3,
        rrb-vector >= 0.2.1 && < 0.3,
        stm >= 2.4 && < 2.6,
        strict-list < 0.2,
        time >= 1.9.3 && < 2,
        timestats < 0.3,
        vector < 0.14

    hs-source-dirs:     src

-- executable calculi
    -- hs-source-dirs:     app

executable bp-demo
    import:             deps
    
    main-is:            BPDemo.hs

    build-depends:      calculi

    hs-source-dirs:     bp-demo
    ghc-options:        -rtsopts "-with-rtsopts=-N -A64m -t"

test-suite calculi-test
    import:             deps
    
    main-is:            calculi-test.hs
    type:               exitcode-stdio-1.0

    other-modules:
        Math.Algebra.General.TestAlgebra
        Math.Algebra.Commutative.Field.TestZModPW
        Math.Algebra.Linear.TestSparseVector
        Math.Algebra.General.TestSparseSum
        Math.Algebra.Commutative.TestUPoly
        Math.Algebra.Commutative.TestGroebnerBasis
        Math.Algebra.Commutative.TestEPoly
        Math.Algebra.Commutative.TestBinPoly

    build-depends:      calculi, hedgehog == 1.*, mod, rrb-vector, strict-list, tasty < 1.6,
                        tasty-hedgehog < 1.5

    hs-source-dirs:     test
    ghc-options:        -rtsopts "-with-rtsopts=-N -A64m"

benchmark time-gb
    import:             deps
    
    main-is:            time-gb.hs
    type:               exitcode-stdio-1.0

    -- Modules included in this executable, other than Main.
    -- other-modules:

    build-depends:      calculi, process >= 1.2 && < 2, time >= 1.9.3 && < 2

    hs-source-dirs:     timings
    ghc-options:        -rtsopts "-with-rtsopts=-N -A64m -s"

benchmark bench
    import:             deps
    main-is:            bench.hs
    type:               exitcode-stdio-1.0
    build-depends:      calculi, deepseq < 2, random >= 1.2 && < 1.3, tasty, tasty-bench < 0.4
                        -- , poly, vector, vector-sized
    hs-source-dirs:     timings
    ghc-options:        -rtsopts -with-rtsopts=-T
